assets/css/app.css
.header .title {
    font-family: monospace;
}

html body {
    margin: 0px;
}

nav ul {
    margin: 0px;
}

.navigation h1 {
    white-space: nowrap;
    display: inline;
}

div.container {
    max-width: none;
    width: 100%;
}

.nav-button:hover {
    text-decoration: none;
    background-color: #eee;
}

.nav-button {
    border-radius: 4px;
}

.nav-button {
    position: relative;
    display: block;
    padding: 10px 15px;
}

.nav-button:focus {
    outline: thin dotted;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}

.nav-button:focus, .nav-button:hover {
    color: #23527c;
    text-decoration: underline;
}

.nav-button {
    border: none;
    background: inherit;
    color: #337ab7;
}

form.bare {
    margin: 0 0 0 0;
}

input.form-control[type="file"] {
    border: none;
    background-color: inherit;
    box-shadow: none;
    height: auto;
    width: auto;
    display: inline;
}

.call-to-action:hover {
    text-decoration: none;
    background-color: #eee;
}

.call-to-action {
    font-weight: bolder;
    border-radius: 4px;
}

.call-to-action {
    position: relative;
    display: block;
    padding: 10px 15px;
}

.call-to-action:focus {
    outline: thin dotted;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}

.call-to-action:focus, .call-to-action:hover {
    color: #23527c;
    text-decoration: underline;
}

.call-to-action {
    border: none;
    background: inherit;
    color: #337ab7;
}

.actionable {
    cursor: pointer;
}

#dependency_graph {
    display: table-cell;
}

svg#techtree-graph {
    position: absolute;
}

svg#techtree-graph a {
    text-decoration: none;
}

.overlay {
    background: rgba(0,0,0,0.5);
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    position: absolute;
}

.popup {
    background-color: white;
    margin: 2ex;
    border-radius: 2px;
    padding: 2ex;
    box-shadow: 0px 0px 3px 3px rgba(0,0,0, 0.3);
    border: none;
}

.popup h1 {
    margin-top: 2ex;
    margin-bottom: 2ex;
}

.popup .body {
    margin-left: 2ex;
    margin-right: 2ex;
}

.popup h1 a {
    cursor: pointer;
    text-decoration: underline;
}

.popup h1 a:not(.navigation) {
    color: inherit;
}

.secondary {
    font-size: small;
}

.action-button {
    border: 1px solid #888;
    margin: 1ex;
    padding: 0.5ex;
    background: rgba(0,0,0,0.1);
    border-radius: 3px;
}

.action-button:hover {
    background: rgba(0,0,0,0.8);
    color: #eee;
}

.value {
    font-weight: bold;
    text-decoration: underline;
    margin: 2ex;
}

.completion label {
    font-weight: normal;
}

.description {
    font-style: italic;
    text-decoration: underline;
    cursor: pointer;
}

button.dangerous {
    background-color: #ff4444;
    border: 1px solid #ce6060;
    color: white;
}

button.dangerous:hover {
    background-color: #ff0000;
    border: 1px solid #ff4444;
    color: white;
}

li {
    list-style: none;
}

button.list-index {
    margin-right: 1ex;
    width: 16px;
    height: 18px;
    padding: 0;
    display: inline;
}

button.list-index svg {
    display: inline;
    width: 100%;
    height: 100%;
}

button.loading {
    background: linear-gradient(to left, rgba(0,0,0,0.8) 50%,#548A00 50%);
    color: white;
}

button.loading:hover {
    background: linear-gradient(to left, rgba(0,0,0,0.8) 50%,#548A00 50%);
    color: white;
}

button.loaded {
    background: #548A00;
    color: white;
}

button.loaded:hover {
    background: #548A00;
    color: white;
}

button.error {
    background: #ff0000;
    color: white;
}

button.error:hover {
    background: #ff0000;
    color: white;
}

.completion-marker {
    width: 0;
    font-style: italic;
    color: #548A00;
}

.title.completed::before {
    content: "Complete!";
    font-style: italic;
    color: #548A00;
    font-size: medium;
    margin-left: 2ex;
}

